Override the default's WM class
This is very ugly, but it's the only solution I could find for #17